# cuda-gemm-from-scratch

./: .clang-format  CMakeLists.txt  README.md
src/: arg_parser.cu  arg_parser.cuh  benchmark_runner.cuh  kernel_dispatcher.cuh  main.cu  types.cuh  utils.cu  utils.cuh
src/kernels/: 00_cublas.cuh  01_naive.cuh  02_tiled.cuh  03_1D_coarsened.cuh  04_2D_coarsened.cuh  05_transposed.cuh  06_warptiling.cuh  07_naive_wmma.cuh  08_naive_mma.cuh  09_hierarchical_mma.cuh  10_vectorized_mma.cuh  11_memory_swizzling.cuh  12_buffered_gmem.cuh  13_unrolled_smem.cuh  verify.cuh
